# Grupo-Estrella---Rust

./: .gitignore  README  notes.md
Learning/: notes.MD
Learning/1-Hello-World/: Cargo.toml  rust
Learning/2-Guessing-game/guessing-game/src/: main.rs
Learning/3-Common-Programming-Concepts/common/src/: main.rs
Learning/W1Bot/: Cargo.toml
Learning/W1Bot/src/: main.rs
RustBot/: .env  Cargo.toml  env
RustBot/src/: command.rs  list.rs  main.rs  mplayer.rs  option_command.rs  song_ranking.txt
W1Bot/src/: main.rs  mplayer.rs
